CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(helloworld)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(bin)
SET(CMAKE_INSTALL_PREFIX ../install)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
FIND_PACKAGE(OPENVDB)
if (OPENVDB_FOUND)
	MESSAGE("Found OpenVDB")
endif (OPENVDB_FOUND)
MESSAGE("OPENVDB_HOME = " ${OPENVDB_HOME})
